# cpp_cmake

./: .gitignore  CMakeLists.txt  name_your_project.sh
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt
include/: project_name.h  vec_str.h
src/: CMakeLists.txt  project_name.cpp  vec_str.cpp
tests/: CMakeLists.txt  project_name_unit.cpp  vec_str_unit.cpp
